welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: not found: value vrai
    if (estSurBiscuit==vrai){
                       ^