welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var x=0
while(sortieTrouvee==false){
  for ( k <- 1 to 5){
    avance();
    if (estSurBiscuit==vrai){
      x=x+1
    }
  }
  if (x>=3){
    gauche();
  }
  else{
    droite();
  }
  
  
  
  
  
  
  
  
  
}